--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "consumirapi",
+  "name": "projetoreact",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://35.12.198/82",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
